--- a/index.html
+++ b/index.html
@@ -1,21 +1,58 @@
-<html>
-    <head>
-        <title>
-            Olá, eu sou a cabeça
-        </title>
-    </head>
-    <body>
-        <h1>h1 Eu sou o corpo</h1>
-        <h1>h1 Eu sou o corpo</h1>
-    </body>
-    <ol>
-        <li>Cafe</li>
-        <li>Cha</li>
-        <li>Leite</li>
-    </ol>
-    <ul>
-        <li>Cafe</li>
-        <li>Cha</li>
-        <li>Leite</li>
-    </ul>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Arthur Anvtunes CV</title>
+
+    <link rel="stylesheet" href="style.css">
+
+</head>
+<body>
+    <main class="resume-contents">
+        <section class="left-section">
+            <section class="left-section-content">
+                <div class="profile">
+                    <img class="profile-image" src="img/profile-image.jpg" alt="Profile image">
+                    <p class="name">Arthur Olivera</p>
+                    <p class="profession">Software Engineer</p>
+                </div>
+                <div class="contact-info">
+                    <p class="left-title">Contato</p>
+                    <ul>
+                        <li><i class="fa fa-phone"></i>+55 84 123456789</li>
+                        <li><i class="fa fa-envelope"></i>arthuroliveiraa@live.com</li>
+                        <li><i class="fa fa-globe"></i>www.arthur.com</li>
+                        <li><i class="fa fa-github"></i>thurxxi</li>
+                    </ul>
+                </div>
+                <div class="skills">
+                    <p class="left-title">Skills</p>
+                    <ul>
+                        <li><p>HTML, CSS, Git & GitHub</p></li>
+                        <li><p>Tecnico em Enfermagem, Ingles Intermediario e Informatica</p></li>
+                    </ul>
+                </div>
+            </section>
+            </section>
+            <section class="right-section">
+                <div class="right-section-contents">
+                    <section class="about gap">
+                        <div class="right-title">Sobre Mim</div>
+                        <p class="about-me-contents">
+                            Olá, eu sou o Arthur<br>
+                            <br> Um pouco mais sobre o que faço
+                            <br> Quais são minhas competencias
+                        </p>
+
+                </div>
+            </section>
+
+
+        </section>
+
+
+    </main>
+</body>
 </html>
