feature: add index.html

--- a/index.html
+++ b/index.html
@@ -45,13 +45,48 @@
                             <br> Um pouco mais sobre o que faço
                             <br> Quais são minhas competencias
                         </p>
-
+                    </section>
                 </div>
+                <section class="experience gap">
+                    <div class="right-title">Experiencia</div>
+                    <div class="experience-contents">
+                        <div class="exp-left">
+                            <p class="exp-company-name">Empresa 01</p>
+                            <p class="exp-time-period">2015-2017</p>
+                        </div>
+                        <div class="exp-right">
+                            <p class="exp-position">Desenvolvedor web</p>
+                            <p class="exp-desc">
+                                Descreva aqui quais foram as principais atividades
+                            </p>
+                        </div>
+                    </div>
+                    <div class="experience-contents">
+                        <div class="exp-left">
+                            <p class="exp-company-name">Empresa 02</p>
+                            <p class="exp-time-period">2022-Present</p>
+                        </div>
+                        <div class="exp-right">
+                            <p class="exp-position">Desenvovledor Front End</p>
+                            <p class="exp-desc">
+                                Descreva aqui quais foram as principais atividades
+                            </p>
+                        </div>
+                    </div>
+                    <div class="experience-contents">
+                        <div class="exp-left">
+                            <p class="exp-company-name">Empresa 03</p>
+                            <p class="exp-time-period">2017-2018</p>
+                        </div>
+                        <div class="exp-right">
+                            <p class="exp-position">Software Engineer</p>
+                            <p class="exp-desc">
+                                Descreva aqui quais foram as principais atividades 
+                            </p>
+                        </div>
+                    </div>
+                </section>
             </section>
-
-
-        </section>
-
 
     </main>
 </body>
