--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,6 +10,7 @@
     <link rel="stylesheet" href="style.css">
 
 </head>
+
 <body>
     <main class="resume-contents">
         <section class="left-section">
@@ -30,64 +32,95 @@
                 <div class="skills">
                     <p class="left-title">Skills</p>
                     <ul>
-                        <li><p>HTML, CSS, Git & GitHub</p></li>
-                        <li><p>Tecnico em Enfermagem, Ingles Intermediario e Informatica</p></li>
+                        <li>
+                            <p>HTML, CSS, Git & GitHub</p>
+                        </li>
+                        <li>
+                            <p>Tecnico em Enfermagem, Ingles Intermediario e Informatica</p>
+                        </li>
                     </ul>
                 </div>
             </section>
-            </section>
-            <section class="right-section">
-                <div class="right-section-contents">
-                    <section class="about gap">
-                        <div class="right-title">Sobre Mim</div>
-                        <p class="about-me-contents">
-                            Olá, eu sou o Arthur<br>
-                            <br> Um pouco mais sobre o que faço
-                            <br> Quais são minhas competencias
-                        </p>
-                    </section>
-                </div>
-                <section class="experience gap">
-                    <div class="right-title">Experiencia</div>
-                    <div class="experience-contents">
-                        <div class="exp-left">
-                            <p class="exp-company-name">Empresa 01</p>
-                            <p class="exp-time-period">2015-2017</p>
-                        </div>
-                        <div class="exp-right">
-                            <p class="exp-position">Desenvolvedor web</p>
-                            <p class="exp-desc">
-                                Descreva aqui quais foram as principais atividades
-                            </p>
-                        </div>
-                    </div>
-                    <div class="experience-contents">
-                        <div class="exp-left">
-                            <p class="exp-company-name">Empresa 02</p>
-                            <p class="exp-time-period">2022-Present</p>
-                        </div>
-                        <div class="exp-right">
-                            <p class="exp-position">Desenvovledor Front End</p>
-                            <p class="exp-desc">
-                                Descreva aqui quais foram as principais atividades
-                            </p>
-                        </div>
-                    </div>
-                    <div class="experience-contents">
-                        <div class="exp-left">
-                            <p class="exp-company-name">Empresa 03</p>
-                            <p class="exp-time-period">2017-2018</p>
-                        </div>
-                        <div class="exp-right">
-                            <p class="exp-position">Software Engineer</p>
-                            <p class="exp-desc">
-                                Descreva aqui quais foram as principais atividades 
-                            </p>
-                        </div>
-                    </div>
+        </section>
+        <section class="right-section">
+            <div class="right-section-contents">
+                <section class="about gap">
+                    <div class="right-title">Sobre Mim</div>
+                    <p class="about-me-contents">
+                        Olá, eu sou o Arthur<br>
+                        <br> Um pouco mais sobre o que faço
+                        <br> Quais são minhas competencias
+                    </p>
                 </section>
+            </div>
+            <section class="experience gap">
+                <div class="right-title">Experiencia</div>
+                <div class="experience-contents">
+                    <div class="exp-left">
+                        <p class="exp-company-name">Empresa 01</p>
+                        <p class="exp-time-period">2015-2017</p>
+                    </div>
+                    <div class="exp-right">
+                        <p class="exp-position">Desenvolvedor web</p>
+                        <p class="exp-desc">
+                            Descreva aqui quais foram as principais atividades
+                        </p>
+                    </div>
+                </div>
+                <div class="experience-contents">
+                    <div class="exp-left">
+                        <p class="exp-company-name">Empresa 02</p>
+                        <p class="exp-time-period">2022-Present</p>
+                    </div>
+                    <div class="exp-right">
+                        <p class="exp-position">Desenvovledor Front End</p>
+                        <p class="exp-desc">
+                            Descreva aqui quais foram as principais atividades
+                        </p>
+                    </div>
+                </div>
+                <div class="experience-contents">
+                    <div class="exp-left">
+                        <p class="exp-company-name">Empresa 03</p>
+                        <p class="exp-time-period">2017-2018</p>
+                    </div>
+                    <div class="exp-right">
+                        <p class="exp-position">Software Engineer</p>
+                        <p class="exp-desc">
+                            Descreva aqui quais foram as principais atividades
+                        </p>
+                    </div>
+                </div>
             </section>
-
+            <section class="education gap">
+                <div class="right-title">Formação Academica</div>
+                <div class="education-contents">
+                    <div class="education-left">
+                        <p class="education-school-name">UFRN </p>
+                        <p class="educationp-time-period">2020~2024</p>
+                    </div>
+                    <div class="education-right">
+                        <p class="education-subject">Engenharia de Software</p>
+                        <p class="education-desc">
+                            Pós graduação em engenharia de software
+                        </p>
+                    </div>
+                </div>
+                <div class="education-contents">
+                    <div class="education-left">
+                        <p class="education-school-name">IEC</p>
+                        <p class="educationp-time-period">2015-2017</p>
+                    </div>
+                    <div class="education-right">
+                        <p class="education-subject">Tecnico em Enfermagem</p>
+                        <p class="education-desc">
+                            Tecnico em Enfermagem
+                        </p>
+                    </div>
+                </div>
+            </section>
+            </section>
+        </section>
     </main>
 </body>
 </html>
