--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Arthur Anvtunes CV</title>
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,700;1,100;1,300;1,400;1,700&display=swap" rel="stylesheet">
+
+    
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
     <link rel="stylesheet" href="style.css">
 
 </head>
@@ -85,9 +92,23 @@
                             </p>
                         </div>
                     </div>
-                </section>
             </section>
-
+            <section class="awards gap">
+                <div class="right-title">Cursos</div>
+                <div class="awards-contents">
+                    <div class="awards-left">
+                    <p class="awards-company-name">Desenvolvedor Front-End</p>
+                    <p class="awards-time-period">Julho de 2022</p>
+                    </div>
+                    <div class="awards-right">
+                        <p class="awards-name">Curso de UX</p>
+                        <p class="awards-time-period">
+                            Curso feito na EBAC no ano de 2020
+                        </p>
+                    </div>
+                </div>
+            </section>
+        </section>
     </main>
 </body>
 </html>
